News UAT/force-app/main/default/objects/User_Course__c/User_Course__c.object-meta.xml
<CustomObject>
    <label>User Course</label>
    <nameField>
        <displayFormat>UG-{0000}</displayFormat>
        <label>User Course</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>