News UAT/force-app/main/default/objects/User_Course__c/fields/Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status__c</fullName>
    <label>Completion Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>