News UAT/force-app/main/default/objects/User_Course__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>User Courses</relationshipLabel>
    <relationshipName>User_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>