News UAT/force-app/main/default/objects/User_Course__c/fields/Current_Topic__c.field-meta.xml
<CustomField>
    <fullName>Current_Topic__c</fullName>
    <label>Current Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>