News UAT/force-app/main/default/objects/User_Course__c/fields/Success_Status__c.field-meta.xml
<CustomField>
    <fullName>Success_Status__c</fullName>
    <label>Success Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>