News UAT/force-app/main/default/objects/User_Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_ID__c</columns>
    <columns>Attempt__c</columns>
    <columns>Completion_Status__c</columns>
    <columns>Course__c</columns>
    <columns>Current_Score__c</columns>
    <columns>Highest_Score__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Success_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>